<resources>
    <string name="app_name">Ina</string>
    <string name="title_activity_map__online">Map</string>
    <string name="Trimester1">Trimester 1</string>
    <string name="Trimester2">Trimester 2</string>
    <string name="Trimester3">Trimester 3</string>
    <string name="Lesson1">Weeks 1-4</string>
    <string name="Lesson2">Weeks 5-7</string>
    <string name="Lesson3">Weeks 8-11</string>
    <string name="Lesson4">Weeks 12-15</string>
    <string name="Lesson5">Weeks 16-18</string>
    <string name="title_activity_about_me">AboutMe</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_help">Help</string>
    <string name="about_me_description">Welcome to Project Ina! This app was created in order to
        help pregnant women in your reservation learn more about what happens before, during,
        and after pregnancy, making the process just a little bit easier.</string>
    <string name="about_me_title">About Me</string>
    <string name="help_title">Help</string>
    <string name="help_description">See the tutorial below for step by step instructions on how
        to use this app.</string>
    <string name="title_activity_trimester">Trimester</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about_me">About Me</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="glossary_header">Glossary</string>
    <string name="title_activity_map">Map</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_glossary">Glossary</string>
    <string name="trim1">Trimester 1</string>
    <string name="trim2">Trimester 2</string>
    <string name="trim3">Trimester 3</string>
    <string name="trim_instructions">Select a trimester below.</string>
    <string name="feedbackInstructions">Enter a message below:</string>
    <string name="email">Enter your e-mail address:</string>
    <string name="questions">Question</string>
    <string name="suggestions">Suggestion</string>
    <string name="submit">Submit</string>
    <string name="name">Enter your name:</string>
    <string name="selectFeedbackType">Select type of feedback below:</string>
    <string name="title_activity_resource">Resource</string>
    <string name="app_help">Need help with the app?</string>
    <string name="aditi_resource">Aditi Takle: 571-422-0259</string>
    <string name="zach_resource">Zach Skemp: 703-401-6163</string>
    <string name="local_resources">Local Resources</string>
    <string name="local_hospital_1">Hospital #1: 555-555-5555</string>
    <string name="local_hospital_2">Hospital #2: 111-111-1111\n</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_trimesters">Weekly Lessons</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background_intro_title">What Is This App All About?</string>
    <string name="background_intro_text">
        Women have the unique ability to create and maintain life. Because of this incredible experience, women’s health is extremely important, not only to individual women, but also to future generations. Project Ina is a platform to connect you with your local resources, helpful community members, and other mothers, all while giving you important information on your pregnancy and motherhood experience. While this app is here for you to learn more about your  health and get connected to resources in your area, ultimately you are in charge of your own health and you know what’s best for your future baby.
        \n\nFocusing on your health begins before the baby is even conceived. (Conception happens when a woman’s egg meets a man’s sperm cell. This is the first step in combining the traits of the woman and man to form a baby). During this time, you should follow an appropriate diet, make sure you have all the proper vaccines, are taking the medications that you need to, and are doing the right amount of physical activity. This sounds like a lot of work to do even before you become pregnant! But making sure that both your mind and body are ready for pregnancy is extremely important for yourself and your future baby. You should have a say in (1) when you want to have kids, (2) how many kids you want, and (3) the spacing between your kids. Family planning methods can help you be in control of these three questions.
        \n\nIf you decide that it’s the right time for you to have a child, it’s important that you’re in a nurturing environment that has opportunities for social and intellectual growth. Unhealthy environments may include exposure to secondhand smoke (Secondhand smoke occurs if you are near people that smoke and accidentally breathe in their smoke.), environmental toxins (poisonous or cancer-causing substances in the environment), unsafe drugs, and even emotional stress. There are many resources in the SWO community and within this app that can help you to eliminate these harmful elements and promote a healthy environment.
        \n\nThis app can help you to navigate the medical experience of pregnancy. Doctor appointments can be stressful, especially if you don’t always understand why certain procedures are being done. Through this app, you can learn more about how your baby is developing throughout your pregnancy, pre-natal procedures, complications of pregnancy, and delivery procedures. If you’re the type of person that finds comfort in planning, you can use the “Checklist” feature in this app to make sure you are going to all your appointments, finding a way to pay for pregnancy care, and preparing for delivery. You can even make your own check-lists. The “Events” page will help you to connect with other mothers and community members at SWO events.
        \n\nThe Project Ina team hopes that this app helps you to have a healthy pregnancy and motherhood experience!

    </string>
    <string name="fetal_dev_title"><b>Fetal Development</b></string>
    <string name="next_steps_title"><b>Next Steps</b></string>
    <string name="healthy_relationships_title"><b>Healthy Relationships</b></string>
    <string name="healthy_diet_title"><b>Healthy Diet</b></string>
    <string name="domestic_violence_title"><b>Domestic Violence and Sexual Assault</b></string>
    <string name="meds_title"><b>Medications and Supplements Considered Safe During Pregnancy</b></string>
    <string name="procedures_title"><b>Pre-natal Medical Procedures</b></string>
    <string name="pregnancy_title"><b>Pregnancy</b></string>
</resources>