<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:weightSum="16"
    tools:context="com.projectina.ina.FeedbackFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/name" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1.5"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/email" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/selectFeedbackType"
        android:gravity="center_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonQuestions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="clickQuestions"
            android:text="@string/questions"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonSuggestions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:onClick="clickSuggestions"
            android:text="@string/suggestions"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/feedbackInstructions"
        android:gravity="center_vertical" />


    <EditText
        android:id="@+id/emailBody"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="7"
        android:background="@drawable/back"
        android:gravity="top" />

    <Button
        android:id="@+id/buttonSubmitFeedback"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="2"
        android:onClick="submitFeedbackClick"
        android:text="@string/submit"
        android:gravity="center" />

</LinearLayout>
