<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projectina.ina.TrimestersFrag">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">


        <TextView
            android:id="@+id/TrimesterInstructions"
            style="@android:style/TextAppearance.Large"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"

            android:text="@string/trim_instructions" />

        <Button
            android:id="@+id/toTrimester1"
            style="@android:style/TextAppearance.Large"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"

            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"


            android:layout_weight="2"
            android:text="@string/trim1" />
        <!--android:layout_marginTop="89dp"-->

        <Button
            android:id="@+id/toTrimester2"
            style="@android:style/TextAppearance.Large"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/toTrimester1"

            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"


            android:layout_weight="2"
            android:text="@string/trim2" />
        <!--android:layout_marginTop="75dp"-->

        <Button
            android:id="@+id/toTrimester3"
            style="@android:style/TextAppearance.Large"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/toTrimester2"

            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"


            android:layout_weight="2"
            android:text="@string/trim3" />
        <!--android:layout_marginTop="90dp"-->

    </LinearLayout>

</RelativeLayout>
